--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
-    "typescript": "^3.7.5"
+    "typescript": "^3.7.5",
+    "uuid": "^8.1.0",
+    "zen-observable": "^0.8.15"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -59,7 +61,9 @@
     "@types/react-redux": "^7.1.9",
     "@types/react-router": "^5.1.7",
     "@types/react-router-dom": "^5.1.5",
+    "@types/uuid": "^8.0.0",
     "@types/webpack-env": "^1.15.2",
+    "@types/zen-observable": "^0.8.0",
     "@typescript-eslint/eslint-plugin": "^2.33.0",
     "@typescript-eslint/parser": "^2.33.0",
     "eslint": "^6.8.0",
