--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -37,7 +37,15 @@
     "no-use-before-define": "off",
     "@typescript-eslint/no-use-before-define": ["error"],
     "no-shadow": "off",
-    "@typescript-eslint/no-shadow": ["error"]
+    "@typescript-eslint/no-shadow": ["error"],
+    "jsx-a11y/label-has-associated-control": [
+      2,
+      {
+        "controlComponents": ["Field"],
+        "depth": 3
+      }
+    ],
+    "react/require-default-props": "off"
   },
   "settings": {
     "import/resolver": {
