--- a/package.json
+++ b/package.json
@@ -13,14 +13,15 @@
     "@types/react-dom": "17.0.11",
     "antd": "4.18.6",
     "connected-react-router": "6.9.2",
+    "formik": "^2.2.9",
     "history": "5.2.0",
     "node-sass": "7.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-markdown": "8.0.0",
     "react-redux": "7.2.6",
-    "react-router": "6.2.1",
-    "react-router-dom": "6.2.1",
+    "react-router": "^5.2.1",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
     "typescript": "4.5.5",
     "url-parse": "1.5.4",
@@ -82,5 +83,14 @@
     "lint-staged": "12.3.3",
     "prettier": "2.5.1",
     "rimraf": "3.0.2"
+  },
+  "jest": {
+    "moduleNameMapper": {
+      "\\.(css|less|sass|scss)$": "<rootDir>/__mocks__/styleMock.js",
+      "\\.(gif|ttf|eot|svg)$": "<rootDir>/__mocks__/fileMock.js"
+    },
+    "transformIgnorePatterns": [
+      "(?!(/node_modules/(react-markdown|vfile|vfile-message|unist-.*|unified|bail|is-plain-obj|trough|remark-.*|mdast-util-.*|micromark.*|decode-named-character-reference|character-entities|property-information|hast-util-whitespace|space-separated-tokens|comma-separated-tokens|pretty-bytes)/))(/node_modules/.+.(js|jsx|mjs|cjs|ts|tsx)$)"
+    ]
   }
 }
