--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -45,7 +45,13 @@
         "depth": 3
       }
     ],
-    "react/require-default-props": "off"
+    "react/require-default-props": "off",
+    "prettier/prettier": [
+      "error",
+      {
+        "endOfLine":"auto"
+      }
+    ]
   },
   "settings": {
     "import/resolver": {
