chore: make everything work with updated packages

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
+    "@craco/craco": "^6.4.3",
     "@reduxjs/toolkit": "1.8.1",
     "@testing-library/jest-dom": "5.16.4",
     "@testing-library/react": "13.2.0",
@@ -12,25 +13,37 @@
     "@types/react": "18.0.9",
     "@types/react-dom": "18.0.4",
     "antd": "4.20.5",
-    "connected-react-router": "6.9.2",
+    "craco-antd": "^2.0.0",
     "formik": "2.2.9",
-    "history": "5.3.0",
-    "node-sass": "7.0.1",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-markdown": "8.0.3",
     "react-redux": "8.0.1",
-    "react-router": "5.3.1",
-    "react-router-dom": "5.3.1",
+    "react-router": "^6.3.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.0",
     "typescript": "4.6.4",
     "url-parse": "1.5.10",
     "uuid": "8.3.2",
+    "web-vitals": "^2.1.4",
+    "workbox-background-sync": "^6.5.3",
+    "workbox-broadcast-update": "^6.5.3",
+    "workbox-cacheable-response": "^6.5.3",
+    "workbox-core": "^6.5.3",
+    "workbox-expiration": "^6.5.3",
+    "workbox-google-analytics": "^6.5.3",
+    "workbox-navigation-preload": "^6.5.3",
+    "workbox-precaching": "^6.5.3",
+    "workbox-range-requests": "^6.5.3",
+    "workbox-routing": "^6.5.3",
+    "workbox-strategies": "^6.5.3",
+    "workbox-streams": "^6.5.3",
     "zen-observable": "0.8.15"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "rimraf ./build && react-scripts build",
+    "start": "craco start",
+    "build": "rimraf ./build && craco build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "prettier": "prettier --write \"./src/{,!(node_modules|dist|build|coverage)/**/}*.{js,jsx,ts,tsx,json}\"",
@@ -38,6 +51,12 @@
     "lint": "tsc --noEmit && eslint ./src/**/*.{js,jsx,ts,tsx}",
     "lint:fix": "eslint --fix ./src/**/*.{js,jsx,ts,tsx}",
     "firebase:deploy": "npm run build && firebase deploy --only hosting"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
   "browserslist": {
     "production": [
@@ -72,7 +91,7 @@
     "eslint-plugin-jsx-a11y": "6.5.1",
     "eslint-plugin-prettier": "4.0.0",
     "eslint-plugin-react-hooks": "4.5.0",
-    "husky": "7.0.4",
+    "husky": "^8.0.1",
     "lint-staged": "12.4.1",
     "prettier": "2.6.2",
     "rimraf": "3.0.2"
