--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
+    "sass": "^1.52.0",
     "typescript": "4.6.4",
     "url-parse": "1.5.10",
     "uuid": "8.3.2",
@@ -49,8 +50,7 @@
     "prettier": "prettier --write \"./src/{,!(node_modules|dist|build|coverage)/**/}*.{js,jsx,ts,tsx,json}\"",
     "pre-commit": "lint-staged",
     "lint": "tsc --noEmit && eslint ./src/**/*.{js,jsx,ts,tsx}",
-    "lint:fix": "eslint --fix ./src/**/*.{js,jsx,ts,tsx}",
-    "firebase:deploy": "npm run build && firebase deploy --only hosting"
+    "lint:fix": "eslint --fix ./src/**/*.{js,jsx,ts,tsx}"
   },
   "eslintConfig": {
     "extends": [
@@ -72,7 +72,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run pre-commit"
+      "pre-commit": "yarn run pre-commit"
     }
   },
   "devDependencies": {
