--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "workbox-routing": "^6.5.3",
     "workbox-strategies": "^6.5.3",
     "workbox-streams": "^6.5.3",
+    "yaml": "^2.1.0",
     "zen-observable": "0.8.15"
   },
   "scripts": {
